--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
     <header>
         <nav class="navbar">
-            <h1 id="h1-header">Hi, I'm Maya.</h1>
+            <h1 id="h1-header">Character Analysis</h1>
         </nav>
     </header>
 
+    <section>
+        <h3>Howl Pendragon - Howl's Moving Castle</h3>
+    </section>
 
 
 </body>
