--- a/main_page/index.html
+++ b/main_page/index.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main_page/script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 
@@ -12,17 +13,8 @@
 
 </head>
 
-<body style="margin: 0;">
+<body>
 
-    <header>
-        <nav class="navbar">
-            <h1 id="h1-header">Character Analysis</h1>
-        </nav>
-    </header>
-
-    <section>
-        <h3>Howl Pendragon - Howl's Moving Castle</h3>
-    </section>
 
 
 </body>
