--- a/main_page/index.html
+++ b/main_page/index.html
@@ -15,7 +15,9 @@
 
 <body>
 
-    
+    <header>
+        <img width="100%" height="20%" src="website-images/banner.jpg" alt="Header image">
+    </header>
 
 
 </body>
