--- a/main_page/index.html
+++ b/main_page/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <img width="100%" height="20%" src="website-images/banner.jpg" alt="Header image">
+        <img  src="website-images/banner.jpg" alt="Header image">
     </header>
 
 
