--- a/main_page/index.html
+++ b/main_page/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <img  src="website-images/banner.jpg" alt="Header image">
+        <img id="header-img" src="website-images/banner.jpg" alt="Header image">
     </header>
 
 
