--- a/main_page/index.html
+++ b/main_page/index.html
@@ -4,11 +4,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main_page/script.js"></script>
+    <!-- <script src="main_page/script.js"></script> -->
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 
 </head>
@@ -16,10 +17,26 @@
 <body>
 
     <header>
-        <img id="header-img" src="website-images/banner.jpg" alt="Header image">
+        <img id="header-img" src="website-images/banner.png" alt="Header Image">
     </header>
+
+    <hr class="solid">
+
+    <section>
+
+        <div>
+            <img src="website-images/browser-vertical.png" alt="picture">
+        </div>
+
+        <div>
+            <h2>My Profile</h2>
+        </div>
+
+    </section>
 
 
 </body>
 
 </html>
+
+
