created most of the main page

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="main_page/script.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
+
+
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 
@@ -17,22 +25,52 @@
 <body>
 
     <header>
-        <img id="header-img" src="website-images/banner.png" alt="Header Image">
+        <nav>
+            <img id="header-img" src="website-images/banner.png" alt="Header Image">
+
+            <hr class="solid">
+        </nav>
     </header>
 
-    <hr class="solid">
+    <!-- profile section -->
 
-    <section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-2 col-sm-1">
+                <img id="browser-img" class="img-fluid" src="website-images/browser-vertical.png" alt="Vertical browser">
+            </div>
 
-        <div>
-            <img src="website-images/browser-vertical.png" alt="picture">
+            <div class="col-lg-3 col-md-2 col-sm-1">
+                <h2>Profile</h2>
+                <div>
+                    <ul>Maya Oum</ul>
+                    <ul>18 Years Old 02/02/2005</ul>
+                    <ul>Cambodian-American</ul>
+                    <ul>Front-end Developer</ul>
+                    <ul>(^≗ω≗^)</ul>
+                </div>
+
+                </div>
+
+            <div class="col-lg-3 col-md-2 col-sm-1">
+                <h2>Favorite Things</h2>
+                <div>
+                    <ul>Coding</ul>
+                    <ul>Gaming</ul>
+                    <ul>Designing</ul>
+                    <ul>Mathematics</ul>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-2 col-sm-1">
+                <h2>Projects</h2>
+            </div>
+
+
         </div>
 
-        <div>
-            <h2>My Profile</h2>
-        </div>
+    </div>
 
-    </section>
 
 
 </body>
