fixed sizing issues

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <nav>
-            <img id="header-img" src="website-images/banner.png" alt="Header Image">
+            <img id="header-img" src="website-images/banner2.jpg" alt="Header Image">
 
             <hr class="solid">
         </nav>
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <img id="browser-img" class="img-fluid" src="website-images/browser-vertical.png" alt="Vertical browser">
+                <img id="browser-img" class="img-fluid visible" src="website-images/browser-vertical.png" alt="Vertical browser">
             </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
@@ -45,25 +45,31 @@
                 <div>
                     <ul>Maya Oum</ul>
                     <ul>18 Years Old 02/02/2005</ul>
-                    <ul>Cambodian-American</ul>
+                    <ul>Cambodian-American ʕ ● ᴥ ● ʔ </ul>
                     <ul>Front-end Developer</ul>
-                    <ul>(^≗ω≗^)</ul>
                 </div>
-
-                </div>
+                <button id="email-button">
+                    Email
+                </button>
+            </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2>Favorite Things</h2>
+                <h2>Hobbies</h2>
                 <div>
-                    <ul>Coding</ul>
+                    <ul>Programming</ul>
                     <ul>Gaming</ul>
                     <ul>Designing</ul>
-                    <ul>Mathematics</ul>
                 </div>
             </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
                 <h2>Projects</h2>
+                <div>
+                    <ul>
+                        <a style="text-decoration: none; color: #926270;" href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
+
+                    </ul>
+                </div>
             </div>
 
 
