--- a/main_page/index.html
+++ b/main_page/index.html
@@ -37,12 +37,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <img id="browser-img" class="img-fluid visible" src="website-images/browser-vertical.png" alt="Vertical browser">
+                <img id="manga" class="img-fluid visible" src="website-images/manga.png" alt="Vertical browser">
             </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
                 <h2>Profile</h2>
-                <div>
+                <div class="body-border">
                     <ul>Maya Oum</ul>
                     <ul>18 Years Old 02/02/2005</ul>
                     <ul>Cambodian-American ʕ ● ᴥ ● ʔ </ul>
@@ -55,7 +55,7 @@
 
             <div class="col-lg-3 col-md-2 col-sm-1">
                 <h2>Hobbies</h2>
-                <div>
+                <div class="body-border">
                     <ul>Programming</ul>
                     <ul>Gaming</ul>
                     <ul>Designing</ul>
@@ -67,17 +67,15 @@
                 <div>
                     <ul>
                         <a style="text-decoration: none; color: #926270;" href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
-
                     </ul>
+                    <section>
+                        <img id="statue" src="website-images/statue.png" alt="Statue">
+                    </section>
                 </div>
             </div>
-
-
         </div>
 
     </div>
-
-
 
 </body>
 
