--- a/main_page/index.html
+++ b/main_page/index.html
@@ -53,6 +53,8 @@
                 </button>
             </div>
 
+    <!-- hobbies section-->
+
             <div class="col-lg-3 col-md-2 col-sm-1">
                 <h2>Hobbies</h2>
                 <div class="body-border">
@@ -62,8 +64,10 @@
                 </div>
             </div>
 
+    <!-- Projects section-->
+
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2>Projects</h2>
+                <h2>=＾● ⋏ ●＾=</h2>
                 <div>
                     <ul>
                         <a style="text-decoration: none; color: #926270;" href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
@@ -74,8 +78,29 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <hr class="solid">
+
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <img id="pookie" src="website-images/pookie.jpg" alt="Xiao from Genshin Impact">
+                </div>
+
+                <div class="col-md-6">
+                    <p>
+                        
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
 
 </body>
 
