--- a/main_page/index.html
+++ b/main_page/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <img id="manga" class="img-fluid visible" src="website-images/manga.png" alt="Vertical browser">
+                <img id="manga" class="img-fluid visible" src="website-images/Cute Wallpaper😊.jpg" alt="Vertical browser">
             </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
@@ -85,14 +85,17 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <img id="pookie" src="website-images/pookie.jpg" alt="Xiao from Genshin Impact">
                 </div>
 
-                <div class="col-md-6">
-                    <p>
-                        
-
+                <div class="col-md-3">
+                    <p id="song">
+                        we were too close to the stars<br>
+                        i never knew somebody like you, somebody<br>
+                        falling just as hard<br>
+                        i'd rather lose somebody than use somebody
+                        <iframe id="reflections" style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     </p>
                 </div>
 
