--- a/main_page/index.html
+++ b/main_page/index.html
@@ -34,14 +34,16 @@
 
     <!-- profile section -->
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <img id="manga" class="img-fluid visible" src="website-images/Cute Wallpaper😊.jpg" alt="Vertical browser">
+                <img class="manga" class="img-fluid visible" src="website-images/Collections, Xi Zhang.jpg">
+                <img class="manga" src="website-images/Cute Wallpaper😊.jpg">
+                <img class="manga" src="website-images/saturn _3.jpg">
             </div>
 
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2>Profile</h2>
+                <h2 class="headings">Profile</h2>
                 <div class="body-border">
                     <ul>Maya Oum</ul>
                     <ul>18 Years Old 02/02/2005</ul>
@@ -56,7 +58,7 @@
     <!-- hobbies section-->
 
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2>Hobbies</h2>
+                <h2 class="headings">Hobbies</h2>
                 <div class="body-border">
                     <ul>Programming</ul>
                     <ul>Gaming</ul>
@@ -67,41 +69,51 @@
     <!-- Projects section-->
 
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2>=＾● ⋏ ●＾=</h2>
+                <h2 class="headings">=＾● ⋏ ●＾=</h2>
                 <div>
                     <ul>
                         <a style="text-decoration: none; color: #926270;" href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
                     </ul>
                     <section>
-                        <img id="statue" src="website-images/statue.png" alt="Statue">
+                        <img id="statue" class=".d-sm-none .d-md-block
+                        " src="website-images/cassette.png" alt="Statue">
                     </section>
                 </div>
             </div>
         </div>
     </div>
 
-    <hr class="solid">
+
+    <!--Music section-->
+
 
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3">
-                    <img id="pookie" src="website-images/pookie.jpg" alt="Xiao from Genshin Impact">
+                <div class="col-md-6">
+                    <img id="pookie" src="website-images/statue.png" alt="Xiao from Genshin Impact">
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <p id="song">
                         we were too close to the stars<br>
                         i never knew somebody like you, somebody<br>
                         falling just as hard<br>
                         i'd rather lose somebody than use somebody
-                        <iframe id="reflections" style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     </p>
+
+                    <iframe id="reflections" style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    
+
+
                 </div>
 
             </div>
         </div>
     </section>
+
+
+    <hr class="solid">
 
 
 
