changed the color

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <nav>
-            <img id="header-img" src="website-images/banner2.jpg" alt="Header Image">
+            <!--<img id="header-img" src="website-images/Cute Wallpaper😊.jpg" alt="Header Image"> -->
 
             <hr class="solid">
         </nav>
@@ -37,8 +37,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-2 col-sm-1">
-                <img class="manga" class="img-fluid visible" src="website-images/Collections, Xi Zhang.jpg">
-                <img class="manga" src="website-images/Cute Wallpaper😊.jpg">
+                <img class="manga" class="img-fluid visible" src="website-images/header (1).jfif">
+                <img class="manga" src="website-images/header.jfif">
                 <img class="manga" src="website-images/saturn _3.jpg">
             </div>
 
@@ -72,11 +72,11 @@
                 <h2 class="headings">=＾● ⋏ ●＾=</h2>
                 <div>
                     <ul>
-                        <a style="text-decoration: none; color: #926270;" href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
+                        <a style="text-decoration: none; color: #684d37; " href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
                     </ul>
                     <section>
                         <img id="statue" class=".d-sm-none .d-md-block
-                        " src="website-images/cassette.png" alt="Statue">
+                        " src="website-images/Cute Wallpaper😊.jpg" alt="Statue">
                     </section>
                 </div>
             </div>
