--- a/main_page/index.html
+++ b/main_page/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <nav>
-            <!--<img id="header-img" src="website-images/Cute Wallpaper😊.jpg" alt="Header Image"> -->
+            <img id="header-img" src="website-images/Simerenya.jfif" alt="Header Image">
 
             <hr class="solid">
         </nav>
