worked on responsiveness

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <nav>
-            <img id="header-img" src="website-images/Simerenya.jfif" alt="Header Image">
+            <img id="header-img" src="website-images/headerimg.jpg" alt="Header Image">
 
             <hr class="solid">
         </nav>
@@ -36,13 +36,13 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 col-md-2 col-sm-1">
+            <div class="col-lg-3 col-md-6 col-sm-12">
                 <img class="manga" class="img-fluid visible" src="website-images/header (1).jfif">
                 <img class="manga" src="website-images/header.jfif">
                 <img class="manga" src="website-images/saturn _3.jpg">
             </div>
 
-            <div class="col-lg-3 col-md-2 col-sm-1">
+            <div class="col-lg-3 col-md-6 col-sm-12">
                 <h2 class="headings">Profile</h2>
                 <div class="body-border">
                     <ul>Maya Oum</ul>
@@ -50,14 +50,14 @@
                     <ul>Cambodian-American ʕ ● ᴥ ● ʔ </ul>
                     <ul>Front-end Developer</ul>
                 </div>
-                <button id="email-button">
-                    Email
-                </button>
+                <a href="mailto:maya.oum02@gmail.com">
+                    <button id="email-button">Email</button>
+                </a>
             </div>
 
     <!-- hobbies section-->
 
-            <div class="col-lg-3 col-md-2 col-sm-1">
+            <div class="col-lg-3 col-md-6 col-sm-12">
                 <h2 class="headings">Hobbies</h2>
                 <div class="body-border">
                     <ul>Programming</ul>
@@ -68,15 +68,14 @@
 
     <!-- Projects section-->
 
-            <div class="col-lg-3 col-md-2 col-sm-1">
-                <h2 class="headings">=＾● ⋏ ●＾=</h2>
+            <div class="col-lg-3 col-md-6 col-sm-1">
+                <h2 class="headings">Projects</h2>
                 <div>
                     <ul>
                         <a style="text-decoration: none; color: #684d37; " href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
                     </ul>
                     <section>
-                        <img id="statue" class=".d-sm-none .d-md-block
-                        " src="website-images/Cute Wallpaper😊.jpg" alt="Statue">
+                        <img class="d-none d-lg-block" id="statue" src="website-images/Cute Wallpaper😊.jpg">
                     </section>
                 </div>
             </div>
@@ -95,6 +94,9 @@
                 </div>
 
                 <div class="col-md-6">
+
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    
                     <p id="song">
                         we were too close to the stars<br>
                         i never knew somebody like you, somebody<br>
@@ -102,9 +104,7 @@
                         i'd rather lose somebody than use somebody
                     </p>
 
-                    <iframe id="reflections" style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                    
-
+                    <img id="girl" src="website-images/girl.jfif">
 
                 </div>
 
@@ -113,7 +113,9 @@
     </section>
 
 
-    <hr class="solid">
+    <hr class="foot">
+
+
 
 
 
