--- a/main_page/index.html
+++ b/main_page/index.html
@@ -90,7 +90,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <img id="pookie" src="website-images/statue.png" alt="Xiao from Genshin Impact">
+                    <img id="pookie" src="website-images/hanako brown manga icon ♡.jfif" alt="Xiao from Genshin Impact">
                 </div>
 
                 <div class="col-md-6">
