--- a/main_page/index.html
+++ b/main_page/index.html
@@ -4,22 +4,18 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="main_page/script.js"></script> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
-
-
     <link rel="stylesheet" href="style.css">
-    <title>Personal Portfolio</title>
+
+    <title>Website</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
@@ -27,9 +23,9 @@
     <header>
         <nav>
             <img id="header-img" src="website-images/headerimg.jpg" alt="Header Image">
-
-            <hr class="solid">
         </nav>
+        <hr class="solid">
+
     </header>
 
     <!-- profile section -->
@@ -37,18 +33,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
-                <img class="manga" class="img-fluid visible" src="website-images/header (1).jfif">
-                <img class="manga" src="website-images/header.jfif">
-                <img class="manga" src="website-images/saturn _3.jpg">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6eYZhINTuoHUJSPZ8zFzzx?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
 
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <h2 class="headings">Profile</h2>
                 <div class="body-border">
                     <ul>Maya Oum</ul>
-                    <ul>18 Years Old 02/02/2005</ul>
-                    <ul>Cambodian-American ʕ ● ᴥ ● ʔ </ul>
-                    <ul>Front-end Developer</ul>
+                    <ul>18 Years Old</ul>
+                    <ul>Cambodian ʕ ● ᴥ ● ʔ </ul>
                 </div>
                 <a href="mailto:maya.oum02@gmail.com">
                     <button id="email-button">Email</button>
@@ -75,12 +68,32 @@
                         <a style="text-decoration: none; color: #684d37; " href="https://d4vynn.github.io/blog.io/main_page">Personal Website</a>
                     </ul>
                     <section>
-                        <img class="d-none d-lg-block" id="statue" src="website-images/Cute Wallpaper😊.jpg">
+                        <img class="manga" class="img-fluid visible" src="website-images/header (1).jfif">
+                        <img class="manga" src="website-images/header.jfif">
+                        <img class="manga" src="website-images/saturn _3.jpg">
+                        <!--<img class="d-none d-lg-block" id="statue" src="website-images/Cute Wallpaper😊.jpg">-->
                     </section>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Poem -->
+
+    <section>
+        <h3 class="headings">Two-Headed Calf, by Laura Gilpin</h3>
+        <p class="poem">
+            Tomorrow when the farm boys find this<br>
+            freak of nature, they will wrap his body<br>
+            in newspaper and carry him to the museum.<br>
+            But tonight he is alive and in the north<br>
+            field with his mother. It is a perfect<br>
+            summer evening: the moon rising over<br>
+            the orchard, the wind in the grass. And<br>
+            as he stares into the sky, there are<br>
+            twice as many stars as usual.<br>
+        </p>
+    </section>
 
 
     <!--Music section-->
@@ -90,34 +103,21 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <img id="pookie" src="website-images/hanako brown manga icon ♡.jfif" alt="Xiao from Genshin Impact">
+                    <img id="pookie" src="website-images/hanako brown manga icon ♡.jfif">
                 </div>
-
                 <div class="col-md-6">
-
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2xql0pid3EUwW38AsywxhV?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                    
                     <p id="song">
                         we were too close to the stars<br>
                         i never knew somebody like you, somebody<br>
                         falling just as hard<br>
                         i'd rather lose somebody than use somebody
+
+                        <img src="website-images/statue.png">
                     </p>
-
-                    <img id="girl" src="website-images/girl.jfif">
-
                 </div>
-
             </div>
         </div>
     </section>
-
-
-    <hr class="foot">
-
-
-
-
 
 </body>
 
