removed images and repositioned content

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -20,17 +20,9 @@
 
 <body>
 
-    <header>
-        <nav>
-            <img id="header-img" src="website-images/headerimg.jpg" alt="Header Image">
-        </nav>
-        <hr class="solid">
-
-    </header>
-
     <!-- profile section -->
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6eYZhINTuoHUJSPZ8zFzzx?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -78,27 +70,34 @@
         </div>
     </div>
 
+    <hr class="solid">
     <!-- Poem -->
 
     <section>
-        <h3 class="headings">Two-Headed Calf, by Laura Gilpin</h3>
-        <p class="poem">
-            Tomorrow when the farm boys find this<br>
-            freak of nature, they will wrap his body<br>
-            in newspaper and carry him to the museum.<br>
-            But tonight he is alive and in the north<br>
-            field with his mother. It is a perfect<br>
-            summer evening: the moon rising over<br>
-            the orchard, the wind in the grass. And<br>
-            as he stares into the sky, there are<br>
-            twice as many stars as usual.<br>
-        </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"> 
+                    <h3 class="headings">Two-Headed Calf by Laura Gilpin</h3>    
+                    <p id="poem">
+                        Tomorrow when the farm boys find this<br>
+                        freak of nature, they will wrap his body<br>
+                        in newspaper and carry him to the museum.<br>
+                        But tonight he is alive and in the north<br>
+                        field with his mother. It is a perfect<br>
+                        summer evening: the moon rising over<br>
+                        the orchard, the wind in the grass. And<br>
+                        as he stares into the sky, there are<br>
+                        twice as many stars as usual.<br>
+                    </p>   
+                </div>
+            </div>
+        </div>
     </section>
 
 
     <!--Music section-->
 
-
+    <hr class="solid">
     <section>
         <div class="container-fluid">
             <div class="row">
@@ -111,9 +110,6 @@
                         i never knew somebody like you, somebody<br>
                         falling just as hard<br>
                         i'd rather lose somebody than use somebody
-
-                        <img src="website-images/statue.png">
-                    </p>
                 </div>
             </div>
         </div>
